--- a/frontend/src/styles/Register.module.css
+++ b/frontend/src/styles/Register.module.css
@@ -12,19 +12,16 @@
 }
 
 .modal {
-  position: fixed;
-  width: 50vh;
-  height: 100vh;
-  min-width: 100px;
-  min-height: 100vh;
-  /* overflow: auto; */
+  margin-bottom: 200px;
+  width: 400px;
+  height: 480px;
   background-color: white;
-  padding: 1rem;
-  border-radius: 14px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-radius: 15px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 30;
   animation: slide-down 300ms ease-out forwards;
-  /* overflow: auto; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,13 +31,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* padding-left: 20px; */
   padding-top: 20px;
-  /* padding-right: 20px; */
-  padding-bottom: 5px;
-  width: 200px;
-  /* width: 100%; */
-  /* background-color: blue; */
+  padding-bottom: 10px;
+  width: 300px;
   border-bottom: 0.5px solid #f45b69;
 }
 
@@ -61,40 +54,26 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 5%;
-  /* padding-left: 20px; */
-  /* padding: 20px; */
-  /* width: 100%; */
-  /* background-color: aqua; */
-  /* min-width: 100px; */
+  padding-top: 20px;
 }
 
 .input-section {
-  /* padding-left: 20px; */
-  /* width: 100%; */
-  /* width: 250px; */
-  /* background-color: blueviolet; */
-  padding-bottom: 10px;
+  padding-bottom: 15px;
   margin-left: auto;
   margin-right: auto;
 }
 .input {
   background-color: #d3d3d3;
   border: none;
-  width: 200px;
-  /* width: 100%; */
-  /* width: 100%;   ////use to fit when resizing window */
-  /* width: calc(100% - 1px); */
-  /* overflow: calc(100% - 1px); */
-  height: 25px;
-  border-radius: 10px;
-  /* padding: 5px; */
+  width: 250px;
+  height: 65%;
+  border-radius: 8px;
+  padding: 0 10px 0 10px;
 }
 
 .input-label {
   padding-bottom: 5px;
   font-size: 17px;
-  /* padding-left: 4px; */
 }
 .error-message {
   font-size: 11px;
@@ -103,7 +82,7 @@
   padding-top: 2px;
 }
 .signup-section {
-  padding-top: 10px;
+  padding-top: 20px;
   padding-bottom: 20px;
   font-size: 12px;
 }
@@ -128,12 +107,6 @@
 .register-button:hover {
   opacity: 0.4;
 }
-/* @media (min-width: 768px) {
-    .modal {
-      width: 40rem;
-      left: calc(50% - 20rem);
-    }
-  } */
 
 @keyframes slide-down {
   from {
@@ -146,14 +119,30 @@
   }
 }
 
+@media (max-width: 1200px) {
+  .modal {
+    margin-top: 200px;
+  }
+}
+
 @media (max-width: 820px) {
   .modal {
-    height: 50vh;
-    width: 40vh;
+    margin-top: 200px;
+    height: 100%;
+    width: 100%;
+  }
+
+  .register-title-section {
+    width: 70%;
   }
 
   .form-section {
     padding-top: 10%;
+  }
+
+  .input {
+    width: 300px;
+    height: 30px;
   }
 
   .signup-section {
@@ -165,15 +154,15 @@
 @media (max-width: 450px) {
   .modal {
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    margin-top: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
   }
 
   .register-title-section {
-    width: 300px;
+    width: 95%;
   }
 
   .register-title {
