--- a/frontend/src/styles/Login.module.css
+++ b/frontend/src/styles/Login.module.css
@@ -193,3 +193,45 @@
     width: 200px;
   }
 }
+
+@media (max-width: 300px) {
+  .modal {
+    width: 100%;
+    height: 100%;
+    margin-top: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .login-title-section {
+    width: 95%;
+  }
+
+  .login-title {
+    font-size: 30px;
+  }
+  .form-section {
+    padding-top: 20%;
+  }
+
+  .input {
+    width: 200px;
+    height: 30px;
+  }
+  .signup-section {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-size: 15px;
+  }
+
+  .login-button {
+    padding: 10px;
+    font-size: 15px;
+    cursor: pointer;
+    border: none;
+    border-radius: 50px;
+    transition: all 0.5s ease;
+    width: 200px;
+  }
+}
