--- a/frontend/src/styles/Register.module.css
+++ b/frontend/src/styles/Register.module.css
@@ -12,9 +12,9 @@
 }
 
 .modal {
-  margin-bottom: 200px;
+  margin-bottom: 10vh;
   width: 400px;
-  height: 480px;
+  height: 600px;
   background-color: white;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -66,7 +66,7 @@
   background-color: #d3d3d3;
   border: none;
   width: 250px;
-  height: 65%;
+  height: 30px;
   border-radius: 8px;
   padding: 0 10px 0 10px;
 }
@@ -78,8 +78,9 @@
 .error-message {
   font-size: 11px;
   color: #f45b69;
-  padding-left: 5px;
-  padding-top: 2px;
+  /* padding-left: 5px; */
+  /* padding-top: 2px; */
+  margin-top: 5px;
 }
 .signup-section {
   padding-top: 20px;
@@ -121,13 +122,13 @@
 
 @media (max-width: 1200px) {
   .modal {
-    margin-top: 200px;
+    margin: 0px;
   }
 }
 
 @media (max-width: 820px) {
   .modal {
-    margin-top: 200px;
+    margin: 0px;
     height: 100%;
     width: 100%;
   }
@@ -147,7 +148,7 @@
 
   .signup-section {
     padding-top: 15%;
-    padding-bottom: 20px;
+    /* padding-bottom: 50px; */
     font-size: 15px;
   }
 }
@@ -155,7 +156,7 @@
   .modal {
     width: 100%;
     height: 100%;
-    margin-top: 200px;
+    margin: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -178,7 +179,7 @@
   }
   .signup-section {
     padding-top: 50px;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
     font-size: 15px;
   }
 
@@ -193,11 +194,11 @@
   }
 }
 
-@media (max-width: 300px) {
+@media (max-width: 350px) {
   .modal {
     width: 100%;
     height: 100%;
-    margin-top: 200px;
+    margin: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -211,7 +212,7 @@
     font-size: 30px;
   }
   .form-section {
-    padding-top: 20%;
+    padding-top: 10%;
   }
 
   .input {
@@ -220,7 +221,7 @@
   }
   .signup-section {
     padding-top: 50px;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
     font-size: 15px;
   }
 
@@ -232,5 +233,32 @@
     border-radius: 50px;
     transition: all 0.5s ease;
     width: 200px;
+  }
+}
+
+@media screen and (max-height: 700px) and (min-width: 350px) {
+  .modal {
+    margin: 0px;
+    height: 100%;
+    width: 100%;
+  }
+
+  .register-title-section {
+    width: 95%;
+  }
+
+  .form-section {
+    padding: 20px;
+  }
+
+  .input {
+    width: 200px;
+    height: 30px;
+  }
+
+  .signup-section {
+    padding-top: 5%;
+    /* padding-bottom: 50px; */
+    font-size: 15px;
   }
 }
