--- a/frontend/src/styles/Login.module.css
+++ b/frontend/src/styles/Login.module.css
@@ -12,7 +12,7 @@
 }
 
 .modal {
-  margin-bottom: 200px;
+  /* margin-bottom: 200px; */
   width: 400px;
   height: 480px;
   overflow: auto;
@@ -82,12 +82,12 @@
 .error-message {
   font-size: 11px;
   color: #f45b69;
-  padding-left: 5px;
-  padding-top: 2px;
+  /* padding-left: 5px; */
+  padding-top: 5px;
 }
 
 .signup-section {
-  padding-top: 90px;
+  padding-top: 60px;
   /* margin-top: 50px; */
   padding-bottom: 20px;
   font-size: 12px;
@@ -127,13 +127,13 @@
 
 @media (max-width: 1200px) {
   .modal {
-    margin-top: 200px;
+    margin: 0px;
   }
 }
 
 @media (max-width: 820px) {
   .modal {
-    margin-top: 200px;
+    margin: 0px;
     height: 100%;
     width: 100%;
   }
@@ -156,7 +156,7 @@
   .modal {
     width: 100%;
     height: 100%;
-    margin-top: 200px;
+    margin: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -198,7 +198,7 @@
   .modal {
     width: 100%;
     height: 100%;
-    margin-top: 200px;
+    margin: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
