--- a/frontend/src/styles/Register.module.css
+++ b/frontend/src/styles/Register.module.css
@@ -12,7 +12,7 @@
 }
 
 .modal {
-  margin-bottom: 10vh;
+  /* margin-bottom: 10vh; */
   width: 400px;
   height: 600px;
   background-color: white;
@@ -58,7 +58,7 @@
 }
 
 .input-section {
-  padding-bottom: 15px;
+  padding-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -80,7 +80,7 @@
   color: #f45b69;
   /* padding-left: 5px; */
   /* padding-top: 2px; */
-  margin-top: 5px;
+  /* margin-top: 5px; */
 }
 .signup-section {
   padding-top: 20px;
@@ -236,7 +236,7 @@
   }
 }
 
-@media screen and (max-height: 700px) and (min-width: 350px) {
+@media screen and (max-height: 668px) and (min-width: 350px) {
   .modal {
     margin: 0px;
     height: 100%;
