--- a/frontend/src/styles/TrainerClasses.css
+++ b/frontend/src/styles/TrainerClasses.css
@@ -61,6 +61,15 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
+.no-scheduled-classes {
+  background-color: #f45b69;
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  padding: 10px;
+}
+
 .trainer-classes-table thead {
   background-color: #f45b69;
   color: white;
