--- a/frontend/src/styles/Login.module.css
+++ b/frontend/src/styles/Login.module.css
@@ -69,7 +69,7 @@
   background-color: #d3d3d3;
   border: none;
   width: 250px;
-  height: 60%;
+  height: 30px;
   border-radius: 8px;
   padding: 0 10px 0 10px;
 }
@@ -87,9 +87,9 @@
 }
 
 .signup-section {
-  padding-top: 60px;
+  padding-top: 50px;
   /* margin-top: 50px; */
-  padding-bottom: 20px;
+  padding-bottom: 10px;
   font-size: 12px;
 }
 
