--- a/frontend/src/styles/Map.css
+++ b/frontend/src/styles/Map.css
@@ -1,8 +1,7 @@
 .map-container {
-  padding: 50px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .marker-container {
