move fithub locations map from locations page to home page

--- a/frontend/src/styles/FitHubLocationsMap.css
+++ b/frontend/src/styles/FitHubLocationsMap.css
@@ -3,3 +3,8 @@
   align-items: center;
   justify-content: center;
 }
+
+.fithub-locations-map-grid-container {
+  padding: 50px;
+  margin-top: 4rem;
+}
