--- a/frontend/src/styles/Map.css
+++ b/frontend/src/styles/Map.css
@@ -1,11 +1,19 @@
-.map-container {
-  padding: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .marker-container {
   position: absolute;
   z-index: 1;
+}
+
+.map-control-button {
+  background-color: white;
+  width: 20px;
+  height: 20px;
+  padding: 4px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20%;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
 }
