--- a/frontend/src/styles/AddLocation.css
+++ b/frontend/src/styles/AddLocation.css
@@ -22,6 +22,23 @@
   align-items: center;
   justify-content: center;
   gap: 30px;
+  padding: 1rem;
+}
+
+.file-upload-container {
+  border: 1.5px dashed #f45b69;
+  border-radius: 5px;
+  /* padding: 1rem; */
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.file-upload {
+  padding: 2rem;
+  position: relative;
 }
 
 .add-location-button-container {
@@ -29,7 +46,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 40px;
+  margin-top: 1rem;
 }
 
 .add-location-button {
