--- a/frontend/src/styles/AddLocation.css
+++ b/frontend/src/styles/AddLocation.css
@@ -28,7 +28,6 @@
 .file-upload-container {
   border: 1.5px dashed #f45b69;
   border-radius: 5px;
-  /* padding: 1rem; */
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -39,6 +38,31 @@
 .file-upload {
   padding: 2rem;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.file-input {
+  position: relative;
+  text-align: right;
+  opacity: 0;
+  z-index: 2;
+  cursor: pointer;
+}
+.upload-file-icon-container {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #f45b69;
 }
 
 .add-location-button-container {
